@@ -7,6 +7,7 @@ Version 15
 
 --Difficulty warning when entering a power-up is more clear (thanks Darius).
 
+--Added a tutorial message about score and how to increase it.
 
 
 
